[tool.poetry]
name = "cs545"
version = "0.1.0"
description = "🦾 Robotics"
authors = ["scott susanto <scottsus@usc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
